--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /ConsoleApp11/.vs/ConsoleApp11/v16/.suo
+/ConsoleApp13/.vs/ConsoleApp13/v16
